--- a/LlamitraApi/Helpers/EmailRequest/EmailRegistro.html
+++ b/LlamitraApi/Helpers/EmailRequest/EmailRegistro.html
@@ -43,25 +43,23 @@
                     <!-- Logo -->
                     <tr>
                         <td align="center" style="padding: 20px;">
-                            <img src="images/logo.png" alt="Logo" width="75" height="auto">
+                            <img src="https://i.pinimg.com/736x/78/b6/83/78b68335d3a046c6d9b43ed456d599f1.jpg" alt="Logo" width="75" height="auto">
                         </td>
                     </tr>
 
                     <!-- Encabezado con imagen -->
                     <tr>
                         <td align="center" style="padding: 0; position: relative;">
-                            <img src="images/fondo.jpg" alt="Encabezado" width="600" height="150" style="display: block; width: 100%; height: auto;">
-                            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: #fff;">
-                                <h1 style="margin: 0; font-size: 2.5em;">Finalizá tu Registro</h1>
-                                <p style="margin: 5px 0 0; font-size: 1em;">Al lugar perfecto para comenzar tu viaje en el mundo de las uñas</p>
-                            </div>
+                            <h1 style="margin: 0; font-size: 2.5em;">Finalizá tu Registro</h1>
+                            <p style="margin: 5px 0 0; font-size: 1em;">Al lugar perfecto para comenzar tu viaje en el mundo de las uñas</p>
+                            
                         </td>
                     </tr>
 
                     <!-- Contenido principal -->
                     <tr>
                         <td style="padding: 20px;">
-                            <h2 style="margin: 0; color: #333;">Estás a un paso, <span>Mario Lopez</span></h2>
+                            <h1>¡Gracias por registrarte, [Nombre]!</h1>                            
                             <p>Aquí encontrarás una variedad de cursos diseñados para todos los niveles, desde principiante hasta avanzado, para que puedas desarrollar tus habilidades y crear diseños espectaculares!</p>
 
                             <h3 style="margin-top: 30px; color: #333;">En Zatya podrás:</h3>
@@ -71,14 +69,14 @@
                                 <li>Asistir a cursos presenciales con tu profesional favorito</li>
                                 <li>Y mucho más...</li>
                             </ul>
-                            <p>Para comenzar haz click en el siguiente botón y valida tu cuenta al instante:</p>
+                            <p>Para comenzar haz click en el siguiente botón para volver a nuestra pagina:</p>
                         </td>
                     </tr>
 
                     <!-- Botón -->
                     <tr>
                         <td align="center" style="padding: 20px;">
-                            <a href="#" class="button">Validar cuenta</a>
+                            <a href="http://localhost:5000/validar-cuenta" class="button">Validar cuenta</a>
                         </td>
                     </tr>
 
@@ -88,16 +86,16 @@
                             <table cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td style="padding: 0 10px;">
-                                        <a href="#"><img src="https://ZatyaAcademiaNails.encodelabs.com.ar/Images/logoFacebook.png" alt="Facebook" width="34" height="34"></a>
+                                        <a href="https://www.facebook.com/people/Zatya-Academia/61565196153068/?locale=es_LA"><img src="https://i.pinimg.com/736x/08/ba/e8/08bae886ba1741dd230d15f632ef9d1d.jpg" alt="Facebook" width="34" height="34"></a>
                                     </td>
                                     <td style="padding: 0 10px;">
-                                        <a href="#"><img src="https://ZatyaAcademiaNails.encodelabs.com.ar/Images/logoTwitter.png" alt="Twitter" width="34" height="34"></a>
+                                        <a href="https://x.com/home"><img src="https://i.pinimg.com/736x/b8/cc/bd/b8ccbd175ff9c829f10e6c5d75288fe8.jpg" alt="Twitter" width="34" height="34"></a>
                                     </td>
                                     <td style="padding: 0 10px;">
-                                        <a href="#"><img src="https://ZatyaAcademiaNails.encodelabs.com.ar/Images/logoLinkedin.png" alt="LinkedIn" width="34" height="34"></a>
+                                        <a href="https://www.linkedin.com/company/zatya-academia/"><img src="https://i.pinimg.com/736x/ce/d8/6f/ced86f30580a79a29316dcd968e22236.jpg" alt="LinkedIn" width="34" height="34"></a>
                                     </td>
                                     <td style="padding: 0 10px;">
-                                        <a href="#"><img src="https://ZatyaAcademiaNails.encodelabs.com.ar/Images/logoInstagram.png" alt="Instagram" width="34" height="34"></a>
+                                        <a href="https://www.instagram.com/zatyacademia/?igsh=dmh3ODluYmJzaW5s"><img src="https://i.pinimg.com/736x/39/8e/55/398e555eb3bca26b9dc452db7e46400d.jpg" alt="Instagram" width="34" height="34"></a>
                                     </td>
                                 </tr>
                             </table>
