--- a/LlamitraApi/Helpers/EmailRequest/EmailRegistro.html
+++ b/LlamitraApi/Helpers/EmailRequest/EmailRegistro.html
@@ -52,14 +52,14 @@
                         <td align="center" style="padding: 0; position: relative;">
                             <h1 style="margin: 0; font-size: 2.5em;">Finalizá tu Registro</h1>
                             <p style="margin: 5px 0 0; font-size: 1em;">Al lugar perfecto para comenzar tu viaje en el mundo de las uñas</p>
-                            
+
                         </td>
                     </tr>
 
                     <!-- Contenido principal -->
                     <tr>
                         <td style="padding: 20px;">
-                            <h1>¡Gracias por registrarte, [Nombre]!</h1>                            
+                            <h1>¡Gracias por registrarte, [Nombre]!</h1>
                             <p>Aquí encontrarás una variedad de cursos diseñados para todos los niveles, desde principiante hasta avanzado, para que puedas desarrollar tus habilidades y crear diseños espectaculares!</p>
 
                             <h3 style="margin-top: 30px; color: #333;">En Zatya podrás:</h3>
@@ -73,10 +73,12 @@
                         </td>
                     </tr>
 
+                   
                     <!-- Botón -->
                     <tr>
                         <td align="center" style="padding: 20px;">
                             <a href="http://localhost:5000/validar-cuenta" class="button">Validar cuenta</a>
+                            <a href="http://localhost:4200/auth/login" class="button">Validar cuenta</a>
                         </td>
                     </tr>
 
